<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignEnd="@+id/textView"
    android:layout_alignRight="@+id/textView"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginEnd="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/title_text"
        style="@style/TextAppearance.Title"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/streamer_app_name"
        android:id="@+id/btn_streamer_app"
        style="@style/Button.Udacity"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:weightSum="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/scores_app_name"
            android:id="@+id/btn_scores_app"
            android:layout_weight="1"
            style="@style/Button.Udacity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/library_app_name"
            android:id="@+id/btn_library_app"
            style="@style/Button.Udacity"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/build_app_name"
        android:id="@+id/btn_build_app"
        android:layout_gravity="center_horizontal"
        style="@style/Button.Udacity"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/reader_app_name"
        android:id="@+id/btn_reader_app"
        style="@style/Button.Udacity"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/capstone_app_name"
        android:id="@+id/btn_capstone_app"
        style="@style/Button.Udacity"/>
</LinearLayout>
